# lavrari-api

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/v1/: deps.py
app/api/v1/endpoints/: admin.py  alertas.py  auth.py  comentarios.py  config.py  empresas.py  ia.py  midias.py  obras.py  rdos.py  usuarios.py
app/api/v1/schemas/: alerta.py  assinatura.py  auth.py  comentario.py  dashboard.py  empresa.py  ia.py  midia.py  obra.py  rdo.py  usuario.py
app/core/: exceptions.py  security.py
app/core/config/: settings.py
app/core/infrastructure/mongodb/: manager.py
app/globals/core/config/: settings.py
app/globals/enums/alerta/: tipo_alerta.py
app/globals/enums/comentario/: tipo_comentario.py
app/globals/enums/midia/: tipo_midia.py
app/globals/enums/rdo/: acao_versao.py  fonte_dado_rdo.py  (+1 more)
app/repositories/: alerta_repository.py  assinatura_repository.py  base_repository.py  comentario_repository.py  empresa_repository.py  midia_repository.py  obra_repository.py  obra_usuario_repository.py  rdo_repository.py  rdo_versao_repository.py  refresh_token_repository.py  usuario_repository.py
app/services/: alerta_service.py  assinatura_service.py  auth_service.py  clima_service.py  comentario_service.py  dashboard_service.py  empresa_service.py  geocoding_service.py  image_utils.py  midia_service.py  obra_service.py  pdf_service.py  rdo_service.py  storage_service.py  usuario_service.py  versioning_service.py  workflow_service.py
app/services/ia/: __init__.py  agente.py  analytics.py  insights.py  llm.py  media.py  service.py
(+19 files in other folders)
