[project]
name = "lavrari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "boto3>=1.43.32",
    "certifi>=2026.6.17",
    "fastapi>=0.137.1",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
