[project]
name = "lavrari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "boto3>=1.43.32",
    "certifi>=2026.6.17",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "groq>=0.30,<1",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "weasyprint>=69.0",
]
